Add operations Results POST,PUT and update corresponding openapi
