# public/api-docs/models/openapi.yaml
@@ -238,6 +238,33 @@ paths:
           $ref: '#/components/responses/403_Forbidden_Response'
         '404':
           $ref: '#/components/responses/404_Resource_Not_Found_Response'
+    post:
+      tags: [ Results ]
+      summary: Creates a Result resource.
+      description: 'Creates a new result'
+      operationId: api_results_post
+      security:
+        - MiWApiSecurity: []
+      requestBody:
+        $ref: '#/components/requestBodies/ResultRequestBody'
+      responses:
+        '201':
+          description: '`Created`: result created'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Result'
+          headers:
+            Location:
+              $ref: '#/components/headers/Location'
+        '400':
+          $ref: '#/components/responses/400_BadRequest_Response'
+        '401':
+          $ref: '#/components/responses/401_Unauthorized_Response'
+        '403':
+          $ref: '#/components/responses/403_Forbidden_Response'
+        '422':
+          $ref: '#/components/responses/422_UnprocessableEntity_Response'
     options:
       tags: [Results]
       summary: Provides the list of HTTP supported methods.
@@ -249,6 +276,7 @@ paths:
           headers:
             Allow:
               $ref: '#/components/headers/Allow'
+
 
   /results/{resultId}:
     get:
@@ -270,6 +298,33 @@ paths:
           headers:
             ETag:
               $ref: '#/components/headers/ETag'
+        '401':
+          $ref: '#/components/responses/401_Unauthorized_Response'
+        '403':
+          $ref: '#/components/responses/403_Forbidden_Response'
+        '404':
+          $ref: '#/components/responses/404_Resource_Not_Found_Response'
+    put:
+      tags:
+        - Results
+      summary: Updates the Result resource.
+      description: 'Updates the result identified by `resultId`.'
+      operationId: api_results_put
+      security:
+        - MiWApiSecurity: [ ]
+      parameters:
+        - $ref: '#/components/parameters/resultId'
+      requestBody:
+        $ref: '#/components/requestBodies/ResultRequestBody'
+      responses:
+        '209':
+          description: '`Content Returned`: result previously existed and is now updated'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Result'
+        '400':
+          $ref: '#/components/responses/400_BadRequest_Response'
         '401':
           $ref: '#/components/responses/401_Unauthorized_Response'
         '403':
@@ -510,6 +565,30 @@ components:
                 description: 'User password'
                 type: string
                 format: password
+    ResultRequestBody:
+      description: '`Result` data'
+      required: true
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              result:
+                description: 'Result result'
+                type: integer
+                format: int64
+              user:
+                description: 'User'
+                type: integer
+                format: int64
+              time:
+                description: 'Result time'
+                type: string
+                format: date
+            example:
+              result: 98
+              user: 1
+              time: "2021-01-07 12:12:58"
 
   parameters:
     userId:
